--- a/SCEUCN-APP/app/src/main/res/layout/activity_main.xml
+++ b/SCEUCN-APP/app/src/main/res/layout/activity_main.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
     android:focusable="true"
+    android:background="?attr/backgroundcolor"
     android:focusableInTouchMode="true"
     tools:context=".MainActivity">
 
@@ -28,34 +28,29 @@
         app:subtitleTextColor="@android:color/background_light"
         app:title="SCE UCN"
         app:titleMarginStart="10dp"
-        app:titleTextColor="@android:color/background_light"
-        tools:ignore="MissingConstraints" />
+        app:titleTextColor="@android:color/background_light" />
 
     <EditText
         android:id="@+id/et_placa"
-        android:layout_width="0dp"
+        android:textColorHint="?attr/textcolor"
+        android:background="?attr/cardbackground"
+        android:layout_width="match_parent"
         android:layout_height="50dp"
-
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
         android:hint="Buscar placa..."
+        android:paddingStart="8dp"
         android:inputType="textPersonName"
         android:textAlignment="textStart"
-        app:layout_constraintEnd_toStartOf="@+id/imageButton"
+        android:textColor="?attr/textcolor"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/my_toolbar" />
 
-    <ImageButton
-        android:id="@+id/imageButton"
-        android:layout_width="0dp"
-        android:layout_height="50dp"
-
-        android:layout_marginEnd="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/my_toolbar"
-        app:srcCompat="@drawable/ic_close" />
 
     <ListView
         android:id="@+id/lv_vehiculos"
+        android:background="?attr/backgroundcolor"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="0dp"
