--- a/SCEUCN-APP/app/src/main/res/values/styles.xml
+++ b/SCEUCN-APP/app/src/main/res/values/styles.xml
@@ -1,36 +1,47 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="Theme.Primary.Base.Light" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
-    </style>
-
-    <!-- Base application theme. -->
-    <style name="ThemeA" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorA_Primary</item>
-        <item name="colorPrimaryDark">@color/colorA_PrimaryDark</item>
-        <item name="colorAccent">@color/colorA_Accent</item>
+        <item name="colorPrimary">@color/ucn_azul</item>
+        <item name="colorPrimaryDark">@color/ucn_azuloscuro</item>
+        <item name="colorAccent">@color/ucn_naranjo</item>
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
+        <item name="isLightTheme">true</item>
+        <item name="backgroundcolor">@color/blue_50</item>
+        <item name="cardbackground">@color/white</item>
+        <item name="textcolor">@color/black</item>
+        <item name="tintcolor">@color/ucn_naranjo</item>
+        <item name="buttoncolor">@color/ucn_azul</item>
+        <item name="android:windowAnimationStyle">@style/WindowAnimationTransition</item>
     </style>
 
-    <style name="SuccessButton" parent="Widget.AppCompat.Button.Colored">
-        <item name="android:backgroundTint">@color/colorSuccess</item>
-        <item name="android:textColor">#FFF</item>
-    </style>
-
-    <style name="CancelButton" parent="Widget.AppCompat.Button.Colored">
-        <item name="android:backgroundTint">@color/colorCancel</item>
-        <item name="android:textColor">#FFF</item>
+    <style name="Theme.Primary.Base.Dark" parent="Theme.AppCompat.Light.DarkActionBar">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/ucn_azul</item>
+        <item name="colorPrimaryDark">@color/ucn_azuloscuro</item>
+        <item name="colorAccent">@color/ucn_naranjo</item>
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+        <item name="backgroundcolor">@color/ucn_azulnegro</item>
+        <item name="cardbackground">@color/ucn_azul</item>
+        <item name="textcolor">@color/white</item>
+        <item name="tintcolor">@color/ucn_naranjo</item>
+        <item name="buttoncolor">@color/ucn_naranjo</item>
+        <item name="android:windowAnimationStyle">@style/WindowAnimationTransition</item>
     </style>
 
     <!-- styles.xml -->
     <style name="ToolbarTheme" parent="ThemeOverlay.AppCompat.Light">
         <item name="android:fontFamily">@font/mp_reg</item>
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="WindowAnimationTransition">
+        <item name="android:windowEnterAnimation"> @android:anim/fade_in</item>
+        <item name="android:windowExitAnimation"> @android:anim/fade_out</item>
     </style>
 
 </resources>
