Update: Implementacion sincronica.

--- a/SCEUCN-WEB/Pages/Vehiculos.cshtml
+++ b/SCEUCN-WEB/Pages/Vehiculos.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model SCEUCN_WEB.Pages.VehiculosModel
+@model CL.UCN.DISC.PDIS.SCE.Web.Pages.VehiculosModel
 @{
     ViewData["Title"] = "Vehiculos";
 }
@@ -9,40 +9,22 @@
   <link rel="stylesheet" href="~/css/table.css">
 </head>
 
-@using SCEUCN_WEB.Controller;
-
-<!-- Se obtuvo la lista de vehiculos? -->
-@switch (Model.RequestState)
-{
-  // Si, cargar datos en la tabla.
-  case IceRequestState.Completed:
-    <table>
+<body>
+  <table>
+    <tr>
+      <th>Placa</th>
+      <th>Rut</th>
+      <th>Nombre Completo</th>
+    </tr>
+    
+    <!-- El detalle del vehiculo. -->
+    @foreach (var vehiculo in Model.Vehiculos)
+    {
       <tr>
-        <th>Placa</th>
-        <th>Rut</th>
-        <th>Nombre Completo</th>
+        <td>@(vehiculo.placa)</td>
       </tr>
-      
-      <!-- El detalle del vehiculo. -->
-      @foreach (var vehiculo in Model.Vehiculos)
-      {
-        <tr>
-          <!-- El detalle del vehiculo. -->
-          <td><a asp-page="/vehiculo" asp-route-id="@vehiculo.Placa">@(vehiculo.Placa)</a></td>
-          <td>@(vehiculo.Persona.Rut)</td>
-          <td>@(vehiculo.Persona.Nombres) @(vehiculo.Persona.Apellidos)</td>
-        </tr>
-      }
+    }
 
 
-    </table>
-    break;
-
-  // No, cargar un mensaje de error.
-  case IceRequestState.Error:
-    <p>No se puede establecer una conexion con el servidor...</p>
-    break;
-  
-  default:
-    break;
-}
+  </table>
+</body>
