--- a/SCEUCN-APP/app/src/main/res/layout/layout_card.xml
+++ b/SCEUCN-APP/app/src/main/res/layout/layout_card.xml
@@ -6,7 +6,7 @@
   ~
   -->
 
-<android.support.constraint.ConstraintLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -15,7 +15,7 @@
     android:layout_height="match_parent">
 
     <!-- A CardView that contains a TextView -->
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:id="@+id/card_view"
         android:layout_gravity="center"
         android:padding="24dp"
@@ -28,7 +28,7 @@
         card_view:cardCornerRadius="12dp"
         tools:ignore="MissingConstraints">
 
-        <android.support.constraint.ConstraintLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:padding="10dp"
@@ -88,9 +88,9 @@
                 card_view:layout_constraintTop_toTopOf="parent" />
 
 
-        </android.support.constraint.ConstraintLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 
     <Space
         android:layout_width="match_parent"
@@ -98,4 +98,4 @@
         android:layout_marginTop="0dp"
         card_view:layout_constraintTop_toBottomOf="@+id/card_view"/>
 
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
