--- a/SCEUCN-WEB/Pages/Vehiculos.cshtml
+++ b/SCEUCN-WEB/Pages/Vehiculos.cshtml
@@ -11,6 +11,23 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
+<script>
+  function resetFormulario() {
+    $modal = $('#exampleModal'); 
+    $modal.find('form')[0].reset();
+  }
+
+  function fillDatosDuenio(string rut) {
+    var persona = Model.Personas.find(p => p.rut == rut);
+    $modal = $('#exampleModal'); 
+    $modal.find('inputNombres')[0].fillText("aaaaaaaaa");
+
+    alert(persona.nombres);
+  }
+
+
+</script>
+
 <body>
 
 <div class="card">
@@ -18,7 +35,7 @@
     <div class="d-flex justify-content-between">
       <h4>Vehiculos</h4>
       <!-- Boton para abrir el modal. Acceder al modal, luego a su form y resetear sus campos -->
-      <button type="button" onclick="$modal = $('#exampleModal'); $modal.find('form')[0].reset();" class="btn btn-primary text-right" data-toggle="modal" data-target="#exampleModal">
+      <button type="button" onclick="resetFormulario()" class="btn btn-primary text-right" data-toggle="modal" data-target="#exampleModal">
           <i class="fa fa-plus" style="vertical-align: middle; margin-top: -0.125em"></i>
           Nuevo Vehiculo
       </button>
@@ -67,39 +84,147 @@
       <!-- Cuerpo -->
       <div class="modal-body">
         <form id="form">
-          <div class="form-row">
-            <div class="col">
-              <label for="inputPlaca">Placa</label>
-              <input type="text" class="form-control" id="inputPlaca" placeholder="XX-XX-00">
-            </div>
-            <div class="col">
-              <label for="tipoSelect">Tipo</label>
-              <select class="custom-select mr-sm-2" id="tipoSelect">
-                <option selected>Seleccione...</option>
-                @{
-                  var ind = 1;
-                  foreach (var item in Enum.GetValues(typeof(Tipo)))
-                  {
-                    <option value=@(ind)>@(item.ToString())</option>
-                    ind++;
-                  }
-                }
-              </select>
-            </div>
-            <div class="col">
-              <label for="inputMarca">Marca</label>
-              <input type="text" class="form-control" id="inputMarca" placeholder="Toyota, Hyundai, etc...">
-            </div>
-            <div class="col">
-              <label for="inputAnio">Año</label>
-              <input class="form-control" id="inputAnio" type="number" min="1900" max=@(anioActual) step="1" value="2010"/>
-            </div>
+
+          <!-- Card Duenio del Vehiculo -->
+          <div class="card">
+            <ul class="list-group list-group-flush">
+
+              <!-- Item de la lista -->
+              <li class="list-group-item">
+                <div class="form-row">
+                  <div class="col">
+                    <label for="rutSelect">Rut del dueño</label>
+                    <!-- FIXME -->
+                    <input type="search" onchange="fillDatosDuenio()" class="form-control" id="rutSearch" placeholder="12345678K" list="listaRuts">
+
+                    <datalist id="listaRuts">
+                      @{
+                        foreach (var item in Model.Personas)
+                        {
+                          <option onclick="fillDatosDuenio()" value=@(item.rut) ></option>;
+                        }
+                      }
+                    </datalist>
+
+                  </div>
+                  <div class="col">
+                    <label for="inputNombres">Nombres</label>
+                    <input type="text" class="form-control" id="inputNombres" placeholder="Primer Segundo">
+                  </div>
+                  <div class="col">
+                    <label for="inputApellidos">Apellidos</label>
+                    <input type="text" class="form-control" id="inputApellidos" placeholder="Paterno Materno">
+                  </div>
+                </div>
+              </li>
+              <!-- Fin Item -->
+
+              <!-- Item de la lista -->
+              <li class="list-group-item">
+                <div class="form-row">
+                  <div class="col">
+                    <label for="rolSelect">Rol</label>
+                    <select class="custom-select mr-sm-2" id="rolSelect">
+                      <option selected>Seleccione...</option>
+                      @{
+                        var indRol = 1;
+                        foreach (var item in Enum.GetValues(typeof(Rol)))
+                        {
+                          <option value=@(indRol)>@(item.ToString())</option>
+                          indRol++;
+                        }
+                      }
+                    </select>
+                  </div>
+                  <div class="col">
+                    <label for="contratoSelect">Contrato</label>
+                    <select class="custom-select mr-sm-2" id="contratoSelect">
+                      <option selected>Seleccione...</option>
+                      @{
+                        var indContrato = 1;
+                        foreach (var item in Enum.GetValues(typeof(Contrato)))
+                        {
+                          <option value=@(indContrato)>@(item.ToString())</option>
+                          indContrato++;
+                        }
+                      }
+                    </select>
+                  </div>
+                  <div class="col">
+                    <label for="inputUnidad">Unidad</label>
+                    <input type="text" class="form-control" id="inputUnidad" placeholder="DISC">
+                  </div>
+                </div>
+              </li>
+              <!-- Fin Item -->
+
+              <!-- Item de la lista -->
+              <li class="list-group-item">
+                <div class="form-row">
+                  <div class="col">
+                    <label for="inputOficina">Oficina</label>
+                    <input type="text" class="form-control" id="inputOficina" placeholder="Y-005">
+                  </div>
+                  <div class="col">
+                    <label for="inputEmail">Email</label>
+                    <input type="email" class="form-control" id="inputEmail" placeholder="nombre@ejemplo.cl">
+                  </div>
+                  <div class="col">
+                    <label for="inputMovil">Movil</label>
+                    <input type="text" class="form-control" id="inputMovil" placeholder="+569 1234 5678">
+                  </div>
+                </div>
+              </li>
+              <!-- Fin Item -->
+            </ul>
           </div>
+          <!-- Fin card -->
+
+          <hr>
+
+          <!-- Card Vehiculo -->
+          <div class="card">
+            <ul class="list-group list-group-flush">
+              <!-- Item de la lista -->
+              <li class="list-group-item">
+                <div class="form-row">
+                  <div class="col">
+                    <label for="inputPlaca">Placa</label>
+                    <input type="text" class="form-control" id="inputPlaca" placeholder="XX-XX-00">
+                  </div>
+                  <div class="col">
+                    <label for="tipoSelect">Tipo</label>
+                    <select class="custom-select mr-sm-2" id="tipoSelect">
+                      <option selected>Seleccione...</option>
+                      @{
+                        var ind = 1;
+                        foreach (var item in Enum.GetValues(typeof(Tipo)))
+                        {
+                          <option value=@(ind)>@(item.ToString())</option>
+                          ind++;
+                        }
+                      }
+                    </select>
+                  </div>
+                  <div class="col">
+                    <label for="inputMarca">Marca</label>
+                    <input type="text" class="form-control" id="inputMarca" placeholder="Toyota, Hyundai, etc...">
+                  </div>
+                  <div class="col">
+                    <label for="inputAnio">Año</label>
+                    <input class="form-control" id="inputAnio" type="number" min="1900" max=@(anioActual) step="1" value="2010"/>
+                  </div>
+                </div>
+              </li>
+              <!-- Fin Item -->
+            </ul>
+          </div>
+          <!-- Fin card -->
         </form>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+        <button type="button" class="btn btn-primary">Añadir Vehiculo</button>
       </div>
       <!-- Fin de Cuerpo -->
     </div>
