Changed la manera de implementar las razor pages. Changed vista de la pagina principal.

--- a/SCEUCN-WEB/Pages/Index.cshtml
+++ b/SCEUCN-WEB/Pages/Index.cshtml
@@ -4,7 +4,27 @@
     ViewData["Title"] = "Inicio";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Bienvenido al portal SCEUCN!</h1>
-    <p>TODO: Aqui deberan ir los ultimos registros.</p>
+<div class="jumbotron">
+    <h1>Portal Web SCEUCN</h1>
+</div>
+<div class="row">
+    <div class="col-md-6">
+        <h2>Bienvenido al Portal Web SCEUCN</h2>
+        <p>
+            Este es el portal web para el proyecto "Sistema de Control de Estacionamiento",
+            para el ramo Proyecto de Desarrollo e Integracion de Soluciones, de la Universidad 
+            Catolica del Norte.
+        </p>
+    </div>
+
+    <div class="col-md-6">
+        <h2>Descargar Proyecto</h2>
+        <p>Puede descargar el proyecto desde Github.</p>
+        <p>
+            <a class="btn btn-default"
+               href="https://github.com/ChristianFarias23/SCE-UCN">
+                Ir al proyecto &raquo;
+            </a>
+        </p>
+    </div>
 </div>
