--- a/SCEUCN-WEB/Pages/Shared/_Layout.cshtml
+++ b/SCEUCN-WEB/Pages/Shared/_Layout.cshtml
@@ -1,9 +1,12 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
+    <!-- Importar Iconos para los botones -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - SCEUCN_WEB</title>
+    <title>@ViewData["Title"] - SCEUCN WEB</title>
 
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
@@ -21,7 +24,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index">SCEUCN_WEB</a>
+                <a class="navbar-brand" asp-area="" asp-page="/Index">SCEUCN WEB</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -32,7 +35,13 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Vehiculos">Vehiculos</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Vehiculos/Index">Vehiculos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Registros/Index">Registros</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Personas/Index">Personas</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
@@ -51,7 +60,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2019 - SCEUCN_WEB - <a asp-area="" asp-page="/Privacy">Privacy</a>
+            &copy; 2019 - SCEUCN WEB - <a asp-area="" asp-page="/Privacy">Privacy</a>
         </div>
     </footer>
 
