--- a/SCEUCN-APP/app/src/main/res/layout/dialog_vehiculo.xml
+++ b/SCEUCN-APP/app/src/main/res/layout/dialog_vehiculo.xml
@@ -16,7 +16,6 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:background="@color/colorA_Accent"
         android:layout_height="120dp">
 
         <TextView
@@ -40,89 +39,372 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <Space
+<androidx.constraintlayout.widget.ConstraintLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+
+    <ImageView
         android:layout_width="match_parent"
-        android:layout_height="20dp"
-        android:layout_marginTop="0dp" />
+        android:id="@+id/separador1"
+        android:layout_height="0.3dp"
+        android:layout_marginTop="15dp"
+        android:background="?attr/textcolor"
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <TextView
         android:id="@+id/tv_detalles_persona"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="0dp"
-        android:text="Dueño:"
+        android:layout_marginTop="6dp"
+        android:layout_marginBottom="8dp"
+        android:textSize="20dp"
+        android:text="Dueño"
         android:fontFamily="@font/myriadpro_bold"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textColor="?attr/textcolor"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        app:layout_constraintTop_toBottomOf="@id/separador1"/>
 
     <TextView
-        android:id="@+id/tv_nombre_persona"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
+        android:id="@+id/hint1"
         android:layout_height="wrap_content"
-        android:layout_marginTop="0dp"
+        android:layout_marginTop="6dp"
+        android:text="Rol"
+        android:fontFamily="@font/mp_reg"
+        android:textSize="12dp"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:textColor="?attr/textcolor"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_detalles_persona"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="20dp"
+        android:id="@+id/tv_badge_rol"
+        android:padding="1dp"
+        android:paddingStart="2dp"
+        android:paddingEnd="2dp"
+        android:text="Academico"
+        android:textColor="@color/white"
+        android:textStyle="bold"
+        android:background="@drawable/status_bar"
+        android:layout_marginTop="2dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintTop_toBottomOf="@id/hint1"
+        app:layout_constraintStart_toStartOf="parent"/>
+    
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="6dp"
+        app:layout_constraintStart_toStartOf="parent"
+        android:id="@+id/hint2"
+        android:text="Nombre"
+        android:fontFamily="@font/mp_reg"
+        android:textSize="12dp"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:textColor="?attr/textcolor"
+        app:layout_constraintTop_toBottomOf="@id/tv_badge_rol"/>
+    <TextView
+        android:id="@+id/tv_nombre_persona"
+        android:layout_marginTop="2dp"
+        android:layout_marginBottom="8dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:fontFamily="@font/myriadpro_light"
-        android:paddingLeft="10dp"
         android:text="NOMBRES APELLIDOS"
         android:textAlignment="textStart"
         android:textColor="?attr/textcolor"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
-
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        app:layout_constraintTop_toBottomOf="@id/hint2"
+        app:layout_constraintStart_toStartOf="parent"/>
+    <TextView
+        android:layout_width="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        android:id="@+id/hint3"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="6dp"
+        android:text="Rut"
+        android:fontFamily="@font/mp_reg"
+        android:textSize="12dp"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:textColor="?attr/textcolor"
+        app:layout_constraintTop_toBottomOf="@id/tv_nombre_persona"
+        />
     <TextView
         android:id="@+id/tv_rut"
-        android:layout_width="match_parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="0dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginBottom="8dp"
         android:fontFamily="@font/myriadpro_light"
-        android:paddingLeft="10dp"
         android:text="XX.XXX.XXX-K"
         android:textAlignment="textStart"
         android:textColor="?attr/textcolor"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
-
-    <Space
-        android:layout_width="match_parent"
-        android:layout_height="20dp"
-        android:layout_marginTop="0dp" />
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        app:layout_constraintTop_toBottomOf="@id/hint3"/>
     <TextView
-        android:id="@+id/tv_server_config"
-        android:fontFamily="@font/myriadpro_bold"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        android:id="@+id/hint4"
         android:layout_height="wrap_content"
-        android:layout_marginTop="0dp"
-        android:text="Vehiculo:"
+        android:layout_marginTop="6dp"
+        android:text="Email"
+        android:fontFamily="@font/mp_reg"
+        android:textSize="12dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textColor="?attr/textcolor"
-        android:textStyle="bold" />
+        app:layout_constraintTop_toBottomOf="@id/tv_rut"
+        />
+    <TextView
+        android:id="@+id/tv_email"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="2dp"
+        android:layout_marginBottom="8dp"
+        android:fontFamily="@font/myriadpro_light"
+        android:text="XXXX@XXXX.com"
+        android:textAlignment="textStart"
+        android:textColor="?attr/textcolor"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        app:layout_constraintTop_toBottomOf="@id/hint4"/>
+    
+
+<!--    Lado Derecho-->
+    <TextView
+        android:layout_width="wrap_content"
+        android:id="@+id/hint5"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="6dp"
+        android:text="Móvil"
+        android:fontFamily="@font/mp_reg"
+        android:textSize="12dp"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:textColor="?attr/textcolor"
+        app:layout_constraintTop_toBottomOf="@id/tv_detalles_persona"
+        app:layout_constraintEnd_toEndOf="parent" />
+        />
+    <TextView
+        android:id="@+id/tv_movil"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="2dp"
+        android:layout_marginBottom="8dp"
+        android:fontFamily="@font/myriadpro_light"
+        android:text="+56 9 XXXXXXXX"
+        android:textAlignment="textStart"
+        android:textColor="?attr/textcolor"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/hint5"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:id="@+id/hint6"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="6dp"
+        android:text="Oficina"
+        android:fontFamily="@font/mp_reg"
+        android:textSize="12dp"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:textColor="?attr/textcolor"
+        app:layout_constraintTop_toBottomOf="@id/tv_movil"
+        app:layout_constraintEnd_toEndOf="parent" />
+    />
+    <TextView
+        android:id="@+id/tv_oficina"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="2dp"
+        android:layout_marginBottom="8dp"
+        android:fontFamily="@font/myriadpro_light"
+        android:text="Depto. Matematicas"
+        android:textAlignment="textStart"
+        android:textColor="?attr/textcolor"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/hint6"/>
 
     <TextView
-        android:id="@+id/tv_marca"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
+        android:id="@+id/hint7"
         android:layout_height="wrap_content"
+        android:layout_marginTop="6dp"
+        android:text="Unidad"
+        android:fontFamily="@font/mp_reg"
+        android:textSize="12dp"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textColor="?attr/textcolor"
-        android:layout_marginTop="0dp"
+        app:layout_constraintTop_toBottomOf="@id/tv_oficina"
+        app:layout_constraintEnd_toEndOf="parent" />
+    />
+    <TextView
+        android:id="@+id/tv_unidad"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="2dp"
+        android:layout_marginBottom="8dp"
         android:fontFamily="@font/myriadpro_light"
-        android:paddingLeft="10dp"
-        android:text="MARCA"
+        android:text="Matematicas"
         android:textAlignment="textStart"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+        android:textColor="?attr/textcolor"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/hint7"/>
 
     <TextView
-        android:id="@+id/tv_tipo_vehiculo"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
+        android:id="@+id/hint8"
         android:layout_height="wrap_content"
+        android:layout_marginTop="6dp"
+        android:text="Contrato"
+        android:fontFamily="@font/mp_reg"
+        android:textSize="12dp"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textColor="?attr/textcolor"
-        android:layout_marginTop="0dp"
+        app:layout_constraintTop_toBottomOf="@id/tv_unidad"
+        app:layout_constraintEnd_toEndOf="parent" />
+    />
+    <TextView
+        android:id="@+id/tv_cargo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="2dp"
+        android:layout_marginBottom="8dp"
         android:fontFamily="@font/myriadpro_light"
-        android:paddingLeft="10dp"
-        android:text="TIPO"
+        android:text="Indefinido"
         android:textAlignment="textStart"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+        android:textColor="?attr/textcolor"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/hint8"/>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
+<!--Informacion de vehiculo-->
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:id="@+id/separador2"
+            android:layout_height="0.3dp"
+            android:layout_marginTop="15dp"
+            android:background="?attr/textcolor"
+            app:layout_constraintTop_toTopOf="parent"/>
+
+        <TextView
+            android:id="@+id/tv_server_config"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="6dp"
+            android:layout_marginBottom="8dp"
+            android:textSize="20dp"
+            android:text="Vehiculo"
+            android:fontFamily="@font/myriadpro_bold"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            android:textColor="?attr/textcolor"
+            android:textStyle="bold"
+            app:layout_constraintTop_toBottomOf="@id/separador2"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:id="@+id/hintV1"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="6dp"
+            android:text="Marca"
+            android:fontFamily="@font/mp_reg"
+            android:textSize="12dp"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            android:textColor="?attr/textcolor"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_server_config"/>
+
+        <TextView
+            android:id="@+id/tv_marca"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="?attr/textcolor"
+            android:layout_marginTop="0dp"
+            android:fontFamily="@font/myriadpro_light"
+            android:text="MARCA"
+            android:textAlignment="textStart"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            app:layout_constraintTop_toBottomOf="@id/hintV1"
+            app:layout_constraintStart_toStartOf="parent"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="6dp"
+            app:layout_constraintStart_toStartOf="parent"
+            android:id="@+id/hintV2"
+            android:text="Tipo"
+            android:fontFamily="@font/mp_reg"
+            android:textSize="12dp"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            android:textColor="?attr/textcolor"
+            app:layout_constraintTop_toBottomOf="@id/tv_marca"/>
+        <TextView
+            android:id="@+id/tv_tipo_vehiculo"
+            android:layout_marginTop="2dp"
+            android:layout_marginBottom="8dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/myriadpro_light"
+            android:text="TIPO"
+            android:textAlignment="textStart"
+            android:textColor="?attr/textcolor"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            app:layout_constraintTop_toBottomOf="@id/hintV2"
+            app:layout_constraintStart_toStartOf="parent"/>
+
+
+        <!--    Lado Derecho-->
+        <TextView
+            android:layout_width="wrap_content"
+            android:id="@+id/hintV3"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="6dp"
+            android:text="Año"
+            android:fontFamily="@font/mp_reg"
+            android:textSize="12dp"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            android:textColor="?attr/textcolor"
+            app:layout_constraintTop_toBottomOf="@id/tv_server_config"
+            app:layout_constraintEnd_toEndOf="parent" />
+        />
+        <TextView
+            android:id="@+id/tv_anio_vehiculo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="2dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginLeft="8dp"
+            android:fontFamily="@font/myriadpro_light"
+            android:text="XXXX"
+            android:textAlignment="textStart"
+            android:textColor="?attr/textcolor"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/hintV3"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 
     <Space
         android:layout_width="match_parent"
-        android:layout_height="20dp"
-        android:layout_marginTop="0dp" />
+        android:layout_height="6dp"/>
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="0.3dp"
+        android:layout_marginTop="0dp"
+        android:layout_marginBottom="6dp"
+        android:background="?attr/textcolor"/>
 
     <TextView
         android:id="@+id/tv_detalles_logo"
@@ -130,10 +412,24 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="0dp"
-        android:text="Último Logo:"
+        android:textSize="20dp"
+        android:text="Último Logo"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textColor="?attr/textcolor"
         android:textStyle="bold" />
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="6dp"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="0dp"
+        android:text="Identificador"
+        android:fontFamily="@font/mp_reg"
+        android:textSize="12dp"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:textColor="?attr/textcolor" />
 
     <TextView
         android:id="@+id/tv_id_logo"
@@ -141,7 +437,6 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="0dp"
         android:fontFamily="@font/myriadpro_light"
-        android:paddingLeft="10dp"
         android:textColor="?attr/textcolor"
         android:text="LOGO ID"
         android:textAlignment="textStart"
@@ -149,9 +444,17 @@
 
     <Space
         android:layout_width="match_parent"
-        android:layout_height="10dp"
-        android:layout_marginTop="0dp" />
+        android:layout_height="6dp"/>
 
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="0.3dp"
+        android:layout_marginTop="0dp"
+        android:background="?attr/textcolor"/>
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="6dp"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
