--- a/SCEUCN-APP/app/src/main/res/values/attrs.xml
+++ b/SCEUCN-APP/app/src/main/res/values/attrs.xml
@@ -6,5 +6,6 @@
         <attr name="textcolor" format="color"/>
         <attr name="tintcolor" format="color"/>
         <attr name="buttoncolor" format="color"/>
+        <attr name="rolecolor" format="color"/>
     </declare-styleable>
 </resources>
